fix paddings and margins of collapsable elements

--- a/scss/_list_homes.scss
+++ b/scss/_list_homes.scss
@@ -877,9 +877,7 @@ figure.lh-img-holder {
   }
 
   h1 {
-    padding-top: 1.5em;
-    margin-bottom: 1em;
-    padding-bottom: 0;
+    padding: 26px 0;
   }
 
   ul {
@@ -1044,9 +1042,15 @@ figure.lh-img-holder {
 
 .lh-transportation {
   font-family: $bold-font-family, Arial, Helvetica, sans-serif;
+
   .list-home-title {
-    margin-bottom: 1rem;
+    padding: 6px 0;
   }
+
+  .transporation-group {
+    margin-top: 20px;
+  }
+
   .data-by {
     font-family: $default-font-family !important;
     color: black;
@@ -1069,7 +1073,11 @@ figure.lh-img-holder {
 }
 
 .lh-nearby-places {
-  margin: 25px 0;
+  margin: 20px 0 0;
+
+  .nearby-places-group {
+    margin-top: 20px;
+  }
 
   .round-blue {
     height: 35px !important;
@@ -1079,7 +1087,7 @@ figure.lh-img-holder {
   }
 
   .list-home-title {
-    padding-bottom: 1.1em;
+    padding: 6px 0;
   }
 
   .places-stars {
@@ -1118,6 +1126,10 @@ figure.lh-img-holder {
 
   #lh-school-ranking {
     margin-right: 20px;
+  }
+
+  .list-home-title {
+    padding: 26px 0 12px;
   }
 
   .school-rank-group {
